--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 
+    <!-- airbnb font -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -39,7 +45,7 @@
                 <h2 class="iphone__title">iPhone 15 Pro Max</h2>
                 <h3 class="iphone__subtitle">Pro. Beyond.</h3>
                 <h4 class="iphone__comment">Available now</h4>
-                <button class="iphone__btn">Buy Now</button>
+                <button class="iphone__btn">Buy</button>
             </div>
             
             <div class="iphone__gif">
@@ -75,6 +81,33 @@
 
         </div>
     </section>
+
+
+    <!-- airbnb -->
+    <header class="header">
+        <div class="title">airbnb co.</div>
+    </header>
+
+    <section class="airbnb">
+        <div class="airbnb__back">
+            <img src="img/airbnb/doors.jpg" alt="image" class="airbnb__back-img">
+            <div class="airbnb__content">
+                <div class="airbnb__title-container">
+                    <div class="airbnb__title">unlock<br>udventure.</div>
+                </div>
+                <div class="airbnb__logo">
+                    <img src="img/airbnb/logo.png" alt="logo">
+                </div>
+            </div>
+            
+        </div>
+    </section>
+
+    <!-- bmw -->
+
+    <header class="header">
+        <div class="title">BMW</div>
+    </header>
 
 
     <script src="app.js"></script>
