--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+    <!-- bmw font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -108,7 +113,30 @@
     <header class="header">
         <div class="title">BMW</div>
     </header>
-
+    <section class="bmw">
+        <div class="bmw__back">
+            <div class="bmw__content">
+                <div class="bmw__wrap">
+                    <div class="bmw__logo">
+                        <img src="img/bmw/logo.png" alt="logo">
+                    </div>
+                    <div class="bmw__comment">The Ultimate<br>Driving Machine
+                    </div>
+                </div>
+                <div class="bmw__text">
+                    <div class="bmw__title">
+                        AVOID INVENTORY STORAGE,<BR>
+                            ORDER YOUR NEW BMW TODAY.
+                    </div>
+                    <div class="bmw__subtitle">
+                        ZERO COMPROMISE ON OPTIONS, FEATURES, COLORS & TRIM LEVELS. 
+                    </div>
+                    <button class="bmw__btn">Learn More</button>
+                </div>
+                
+            </div>
+        </div>
+    </section>
 
     <script src="app.js"></script>
 </body>
