--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Banners</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <!-- fonts -->
     <!-- apple font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
